--- a/week_3/day4/cssgrid.css
+++ b/week_3/day4/cssgrid.css
@@ -1,5 +1,84 @@
+body {
+  background-color: #059dc0;
+}
 .main-container {
   display: grid;
   height: 100vh;
-  grid-template-columns: repeat(7, 100px);
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 0.2fr 1.5fr 1.2fr 0.8fr;
+  grid-template-areas:
+    "nav nav nav nav"
+    "sidebar main main main"
+    "sidebar content1 content2 content3"
+    "sidebar footer footer footer";
+  grid-gap: 0.4rem;
+  font-weight: 900;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #004d40;
+  text-align: center;
 }
+nav {
+  grid-area: nav;
+  background-color: #dbf5f0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+footer {
+  grid-area: footer;
+  background-color: #a4e5e0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+main {
+  grid-area: main;
+  background-color: #a4e5e0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+#sidebar {
+  grid-area: sidebar;
+  background-color: #a4e5e0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+#content-div-1 {
+  grid-area: content1;
+  background-color: #0c6170;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+#content-div-2 {
+  grid-area: content2;
+  background-color: #dbf5f0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+#content-div-3 {
+  grid-area: content3;
+  background-color: #37beb0;
+  border-radius: var(--main-radius);
+  padding-top: var(--main-radius);
+}
+@media screen and (max-width: 700px) {
+  .main-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1fr;
+    grid-template-areas:
+      "nav"
+      "sidebar"
+      "main"
+      "content1"
+      "content2"
+      "content3"
+      "footer";
+  }
+}
+/* Baby Blue
+/* #DBF5F0 */
+/* Tiffany Blue */
+/* #A4E5E0 */
+/* Blue Green */
+/* #37BEB0 */
+/* Midnight Blue */
+/* #0C6170  */
