--- a/week_5/day1/examples/task1.css
+++ b/week_5/day1/examples/task1.css
@@ -12,5 +12,8 @@ body {
   background: linear-gradient(rgb(47, 150, 163), rgb(48, 62, 143));
 }
 p {
-  margin: ;
+  margin: 0;
 }
+/* .weather {
+  border-radius: 50%;
+} */
